--- a/css/index.css
+++ b/css/index.css
@@ -1,29 +1,93 @@
-* {
+html, body {
 	margin: 0;
-	padding: 0;
+	height: 120%;
+	font-family: Montserrat, sans-serif;
 }
 
 header {
-	background-color: #333;
-	width: auto;
-	height: 5em;
+	position: relative;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: left;
+	align-items: flex-start;
+	align-content: flex-start;
+	height: 50vw;
 	overflow: hidden;
+	color: #eee;
+}
+
+header:after {
+	content: "";
+	width: 100%;
+	height: 90%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: -1;
+	background: linear-gradient(to top, rgba(0,0,0,0) 0%, rgba(27, 32, 48, 0.7) 100%)
+}
+
+header:before {
+	content: "";
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+		backface-visibility: hidden;
+		transform: translateZ(0) scale(1, 1);
+	background: url("../img/hong-kong.jpg") top center no-repeat;
+	background-size: cover;
+	background-attachment: fixed;
+	animation: grow 60s linear 10ms infinite;
+	transition: all 0.2s ease-in-out;
+	z-index: -2;
 }
 
 header ol li {
-display: inline-block;
-font-family: Montserrat, sans-serif;
-color: #eee;
-margin: 1.8em 2em 1em 0em;
-float: left;
+	display: block;
+	color: #fa983a;
+	font-weight: bold;
+	font-size: 1.5em;
+	text-shadow: 0.1em 0.1em 1em #000;
+	margin: 1.8em 2em 1em 0em;
+	float: left;
 }
 
 header ol {
 	margin: 0em 0em 0em 5.5em;
 }
 
-body {
-background-image: url("../img/hong-kong.jpg");
-background-size: cover;
-background-repeat: no-repeat;
+.promo {
+	width: 100%;
+  	padding: 15% 10% 0 10%;
+	text-align: left;
+  	text-shadow: 0 2px 3px rgba(0, 0, 0, 0.2)
+}
+
+button {
+	background-color: #fa973a33;
+	border: 0.1em solid #fa983a;
+	border-radius: 0.3em;
+	color: inherit;
+	font-family: inherit;
+	font-size: 1.5em;
+	padding: 0.7em 4em;
+	display: inline-block;
+	transition-duration: 0.4s;
+	cursor: pointer;
+}
+
+button:hover {
+	background-color: #fa983a70;
+}
+
+h1, h2, h3, h4 ,h5 {
+	text-align: justify;
+	max-width: 70%;
+}
+
+@keyframes grow {
+	0% {transform: scale(1)}
+	50% {transform: scale(1.2)}
 }
