--- a/css/index.css
+++ b/css/index.css
@@ -87,6 +87,12 @@ h1, h2, h3, h4 ,h5 {
 	max-width: 70%;
 }
 
+.desc {
+	padding: 5% 10%;
+	font-weight: bold;
+	text-align: justify;
+}
+
 @keyframes grow {
 	0% {transform: scale(1)}
 	50% {transform: scale(1.2)}
