Pequenas alterações visuais - seção 'Simples e direto, sem complicações.'

--- a/css/index.css
+++ b/css/index.css
@@ -128,10 +128,11 @@ header h1, h2, h3, h4 ,h5 {
 	font-size: 3em;
 	letter-spacing: 0.1em;
 	text-align: center;
+	color: #eee;
 }
 
 .laranja img {
-	margin-left: 4em;
+	margin: 2em 0 0 4em;
 	max-width: 40%;
 	box-shadow: 0.5em 0.5em 0.5em #000;
 }
