--- a/css/index.css
+++ b/css/index.css
@@ -93,7 +93,7 @@ header h1, h2, h3, h4 ,h5 {
 	text-align: justify;
 }
 
-.seção {
+section {
 	padding: 5% 5%;
 	float: left;
 	width: 40%;
@@ -103,7 +103,7 @@ header h1, h2, h3, h4 ,h5 {
 	align-content: center;
 }
 
-.seção h1 {
+section h1 {
 	font-size: 3em;
 	letter-spacing: 0.1em;
 	text-align: center;
