--- a/public/css/fornecedor.css
+++ b/public/css/fornecedor.css
@@ -113,6 +113,124 @@ header h2{
 	height: 70%;
 }
 
+figure.propostaG {
+	font-family: 'Montserrat', Arial, sans-serif;
+	left:8%;
+	position: relative;
+	overflow: hidden;
+	min-width: 220px;
+	max-width: 80%;
+	max-height: 400px;
+	width: 100%;
+	background: #000000;
+}
+
+figure.propostaG * {
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+}
+figure.propostaG > img {
+	margin-left: 50%;
+	opacity: 1;
+	width: 50%;
+	filter: blur(0px);
+	transition: all 0.35s;
+}
+figure.propostaG figcaption {
+	left: 0;
+	position: absolute;
+	top: 0;
+	width: 50%;
+	height: 100%;
+	background: #ffffff;
+}
+figure.propostaG figcaption h2,
+figure.propostaG figcaption p {
+	margin: 0;
+	color: #000000;
+	text-align: right;
+	position: absolute;
+	padding: 10px 0 10px 0px;
+	margin: 0 40px 0 20px;
+}
+figure.propostaG figcaption h2 {
+	font-size: 1.3em;
+	bottom: 50%;
+	right: 0;
+	font-weight: 300;
+	text-transform: uppercase;
+	border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+}
+figure.propostaG figcaption h2 span {
+ 	font-weight: 800;
+}
+figure.propostaG figcaption p {
+	top: 50%;
+	font-size: 0.9em;
+	opacity: 0.8;
+}
+figure.propostaG .icons {
+	padding: 5px;
+	position: absolute;
+	left: 62.5%;
+	top: 50%;
+	padding-left: 30px;
+	transform: translateY(-50%);
+}
+figure.propostaG .icons img {
+	font-size: 32px;
+	padding: 10px;
+	color: #ffffff;
+	opacity: 0;
+	top: 50%;
+	display: inline-block;
+	transition: all 0.35s;
+	transform: translateX(50px);
+}
+figure.propostaG .icons a:first-child img {
+  transition-delay: 0.2s;
+}
+figure.propostaG .icons a:nth-child(2) img {
+  transition-delay: 0.1s;
+}
+figure.propostaG .icons a:nth-child(3) img {
+  transition-delay: 0s;
+}
+figure.propostaG:after {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  height: 35px;
+  width: 35px;
+  background-color: #000000;
+  content: '';
+  transform: rotate(45deg) translate(-50%, -50%);
+  transform-origin: 0 0;
+}
+figure.propostaG:hover > img,
+figure.propostaG.hover > img {
+  opacity: 0.6;
+  filter: blur(0px);
+  transform: scale(1.1);
+}
+figure.propostaG:hover img,
+figure.propostaG.hover img {
+  opacity: 0.8;
+  transform: translate(0);
+}
+figure.propostaG:hover a:first-child img,
+figure.propostaG.hover a:first-child img {
+  transition-delay: 0.1s;
+}
+figure.propostaG:hover a:nth-child(2) img,
+figure.propostaG.hover a:nth-child(2) img {
+  transition-delay: 0.2s;
+}
+figure.propostaG:hover a:nth-child(3) img,
+figure.propostaG.hover a:nth-child(3) img {
+  transition-delay: 0.3s;
+}
+
 figure.proposta {
 	font-family: 'Montserrat', Arial, sans-serif;
 	float: left;
@@ -124,6 +242,7 @@ figure.proposta {
 	width: 100%;
 	background: #000000;
 }
+
 figure.proposta * {
 	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
